finished frontend + backend

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .app {
-    background: url('./assets/unitygrid.jpg');
+    background: url('./assets/nyc_background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
