--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700;800;900&display=swap');
 
 #root {
-    background: url('./assets/unitygrid.jpg');
+    background: url('./assets/nyc_background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
